TextArea zmenena na TextFlow wrapped v ScrollBar. Prace na main tlacitkach START a STOP

--- a/src/application/application.css
+++ b/src/application/application.css
@@ -50,3 +50,8 @@
 .sliderSizeOfFile {
 	-fx-snap-to-ticks: "true";
 }
+
+
+.textAreaLog{
+	-fx-background-color: white;
+}
